# ATMS

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .sops.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  ai_decision_system.py  atms_config.py  benchmark_results.json  docker-compose.database.yml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.kafka.yml  docker-compose.keycloak.yml  docker-compose.services.yml  manifests.yaml  panel_state.json  projectdocuments.md  pyproject.toml  realtime_video_processor.py  requirements-base.txt  toggle_sahi.command  youtube_decision_processor.py
panel/src-tauri/: Cargo.toml  tauri.conf.json
panel/src-tauri/capabilities/: default.json
panel/src-tauri/src/: lib.rs  main.rs
services/decision-engine/: Dockerfile  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
services/decision-engine/src/: main.py
services/decision-engine/tests/integration/: test_auth_endpoints.py  test_decision_endpoint.py
services/decision-engine/tests/unit/: test_anomaly.py  test_coordination.py  test_decision_id.py  test_min_benefit_gate.py  test_pedestrian_safety.py  test_phase_mapping.py  test_prediction.py  test_preemption.py  test_transit_priority.py
services/traffic-controller/: .dockerignore  Dockerfile  Dockerfile.bak  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
services/traffic-controller/src/: failsafe.py  main.py
services/traffic-controller/tests/: conftest.py
services/traffic-controller/tests/integration/: test_auth_endpoints.py  test_db_postgres.py  test_failsafe_chaos.py  test_preempt_ped_endpoints.py  (+1 more)
(+747 files in other folders)
