[package]
name = "atms-panel"
version = "1.0.0"
description = "ATMS operator panel"
edition = "2021"
rust-version = "1.77"

[lib]
name = "atms_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
